# AR-SmartAssistant

./: ANALYSIS_INDEX.txt  ANALYSIS_README.md  AUDIO_FLOW_ANALYSIS.md  AUDIO_FLOW_DIAGRAM.txt  AUDIO_FLOW_DIAGRAM_UPDATED.txt  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTIONS.md  DEPLOYMENT_SUMMARY.md  FAILURE_MODES.md  GLASS_APP_SUMMARY.md  GLASS_SETUP.md  INSTALL.md  P1_P2_FIXES_SUMMARY.md  QUICK_FIX_CHECKLIST.md  README.md  TESTING_CHECKLIST.md  config.yaml.example  pyproject.toml  setup.sh  test_websocket_client.py
ar_smart_assistant/: config.py  logging_utils.py
ar_smart_assistant/database/: repository.py  schema.py
ar_smart_assistant/llm/: orchestrator.py
ar_smart_assistant/memory/: approvals.py
ar_smart_assistant/perception/: __init__.py  audio_pipeline.py  microphone.py  websocket_receiver.py
ar_smart_assistant/tools/: __init__.py  enroll_speaker.py
ar_smart_assistant/ui/: __init__.py  app.py
ar_smart_assistant/ui/static/css/: style.css
ar_smart_assistant/ui/static/js/: app.js
ar_smart_assistant/ui/templates/: index.html
ar_smart_assistant/workflows/: session_runner.py
docs/: README.md
docs/adr/: README.md
docs/poc-audio-only/: README.md  architecture.md  audio-pipeline.md  database-design.md  debug-ui.md  llm-orchestrator.md  requirements.md  roadmap.md  versioning.md
docs/templates/: FAILURE_MODES_TEMPLATE.md
glass-app/: README.md  build.gradle  build_apk.sh  settings.gradle
glass-app/app/: build.gradle  proguard-rules.pro
tests/: test_config.py  test_database.py  test_workflow.py
(+17 files in other folders)
