[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ar-smart-assistant"
version = "0.1.0"
description = "Reference implementation of the AR SmartAssistant audio-only POC"
readme = "README.md"
authors = [{name = "OpenAI Contributor"}]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "flask>=3.0",
    "flask-cors>=4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "faster-whisper>=0.10.0",
    "torch>=2.0",
    "chromadb>=0.4.0",
    "websockets>=12.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
gpu = [
    "resemblyzer @ git+https://github.com/resemble-ai/Resemblyzer.git",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
